# pointer-abstract-machine

./: ChangeLog.md  README.md  pointer-abstract-machine.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Examples.hs  Main.hs
src/: AbstractMachine.hs  Lib.hs  Pretty.hs  Syntax.hs
src/AbstractMachine/: Heap.hs  Machine.hs  Stack.hs
test/: Spec.hs
test/Spec/: Heap.hs  Stack.hs
