cabal-version: 1.12

name:           pointer-abstract-machine
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/pointer-abstract-machine#readme>
homepage:       https://github.com/githubuser/pointer-abstract-machine#readme
bug-reports:    https://github.com/githubuser/pointer-abstract-machine/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pointer-abstract-machine

library
  exposed-modules:
      AbstractMachine
      Syntax
      Pretty
  other-modules:
      Paths_pointer_abstract_machine
  hs-source-dirs:
      src
  ghc-options:
    -Wall
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable pointer-abstract-machine-exe
  main-is: Main.hs
  other-modules:
      Paths_pointer_abstract_machine
  hs-source-dirs:
      app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
  build-depends:
      base >=4.7 && <5
    , pointer-abstract-machine
  default-language: Haskell2010

test-suite pointer-abstract-machine-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pointer_abstract_machine
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pointer-abstract-machine
  default-language: Haskell2010
